--- a/RestWithAspNet/RestWithAspNet/RestWithAspNet/Properties/launchSettings.json
+++ b/RestWithAspNet/RestWithAspNet/RestWithAspNet/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:31188",
-      "sslPort": 44321
+      "sslPort": 44300
     }
   },
   "profiles": {
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "Calculator/sum/1/1",
       "applicationUrl": "http://localhost:5193",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
